--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,70 @@
-.App {
-  text-align: center;
+body {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.style1 {
+  font-size: 18px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  color: #330000;
+  line-height: 30px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.style2 {
+  font-size: 21px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  color: #330000;
+  font-style: italic;
+  line-height: 36px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.style3 {
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: #330000;
+  line-height: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.style4 {
+  color: #FFFFFF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+a.style4:link,
+a.style4:visited {
+  text-decoration: none;
+}
+
+a.style4:hover {
+  color: #c7d28f;
+}
+
+.style5 {
+  color: #bed199;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+
+.style6 {
+  font-size: 24px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  color: #330000;
+  font-style: italic;
+  line-height: 36px;
+}
+
+table {
+  height: 160px;
+  border: 0px;
+  width: 900px;
+}
+
+.table1 {
+  border: 0px;
+  width: 100%;
 }
